module(name = "xdk_lua")

bazel_dep(name = "googletest", version = "1.14.0.bcr.1")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "5bcb0bd8a917b2b48fb5dc55818515f4be3b63ff",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "lua",
    build_file_content = """
cc_library(
    name = "lua",
    srcs = glob(
        [
            "lua-5.3.5/src/*.c",
            "lua-5.3.5/src/*.h",
        ],
        exclude = [
            "lua-5.3.5/src/lua.c",
            "lua-5.3.5/src/luac.c",
        ],
    ),
    hdrs = [
        "lua-5.3.5/src/lauxlib.h",
        "lua-5.3.5/src/lua.h",
        "lua-5.3.5/src/lua.hpp",
        "lua-5.3.5/src/luaconf.h",
        "lua-5.3.5/src/lualib.h",
    ],
    copts = ["-w"],  # inhibit all warning messages
    includes = ["lua-5.3.5/src"],
    strip_include_prefix = "lua-5.3.5/src",
    include_prefix = "xdk/lua",
    visibility = ["//visibility:public"],
)
        """,
    sha256 = "0c2eed3f960446e1a3e4b9a1ca2f3ff893b6ce41942cf54d5dd59ab4b3b058ac",
    url = "http://www.lua.org/ftp/lua-5.3.5.tar.gz",
)
